# PACT_Templates

./: README.md
templates/c/: Makefile
templates/c/src/: main.c
templates/cpp/: CMakeLists.txt  Makefile
templates/cpp/src/: main.cpp
templates/latex/: bibliography.bib  main.tex
templates/latex/includes/: preamble.tex  tilepage.tex
templates/latex/sections/: apendix_a.tex  conclusion.tex  intro.tex  methods.tex
templates/raylibcpp/: .gitignore  CMakeLists.txt  Makefile  README.md
templates/raylibcpp/src/controller/: arm.cpp  arm.h
templates/shared/: LICENSE  README.md
